--- a/css/reset.css
+++ b/css/reset.css
@@ -3,12 +3,13 @@
 }
 
 *,
-::before,
+/*::before,
 ::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+*/
 
 html {
   interpolate-size: allow-keywords;
